--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Boxo</title>
+		<meta name="google-site-verification" content="sSTPv1wsmc8UZ92sTn8z8dxc90eakTqAj8gONqJoiQg" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -245,7 +246,7 @@ window.addEventListener('popstate', function() {
                                     <br><br>
 											<li><a target="_blank" href="http://twitter.com/boxoltd" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a target="_blank" href="http://facebook.com/boxoltd" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-											<li><a target="_blank" href="http://instagram.com/boxo.site" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+											<li><a target="_blank" href="http://instagram.com/boxo.io" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 											<li><a target="_blank" href="http://vimeo.com/boxo" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
 										</ul>
 									</div>
