--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<div class="content color0 span-3-75">
 									<img width="65%" src="images/boxologo2-02.png">
 										<h3>Social Media Ads, Your Way.</h3>
-									<p>Boxo creates social media ads and <b>powerful</b> branded content for app developers, high street retailers and other franchises.</p>
+									<p>Boxo creates <b>social media ads</b> and powerful branded content for app developers, high street retailers and other franchises.</p>
 
 									<ul class="actions">
 										<li><a href="https://vimeo.com/248405401" class="button special color1" data-lity>Watch Video</a></li>
