--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<div class="content color0 span-3-75">
 									<img width="65%" src="images/boxologo2-02.png">
 										<h3>Social Media Ads, Your Way.</h3>
-									<p>Boxo creates <b>social media ads</b> and powerful branded content for app developers, high street retailers and other franchises.</p>
+									<p>Boxo creates <b>social media ads</b> and powerful branded content, Providing everything you need to get your brand on the map.</p>
 
 									<ul class="actions">
 										<li><a href="https://vimeo.com/248405401" class="button special color1" data-lity>Watch Video</a></li>
@@ -244,8 +244,8 @@ window.addEventListener('popstate', function() {
 									<ul class="icons">
 
                                     <br><br>
-											<li><a target="_blank" href="http://twitter.com/boxoltd" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a target="_blank" href="http://facebook.com/boxoltd" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+											<li><a target="_blank" href="http://twitter.com/boxomedia" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+											<li><a target="_blank" href="http://facebook.com/boxomedia" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 											<li><a target="_blank" href="http://instagram.com/boxo.io" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 											<li><a target="_blank" href="http://vimeo.com/boxo" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
 										</ul>
