--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@ window.addEventListener('popstate', function() {
                                     
 									<ul class="contact-icons color0">
                                         <li class="icon fa-envelope"><a href="mailto:team@boxo.site">team@boxo.site</a></li>
-											<li class="icon fa-phone">London: 07771 404 404</li>
-                                        <li class="icon fa-phone">Manchester: 07847 854 111</li>
+											<li class="icon fa-phone"><b>London:</b> <br>07771 404 404</li>
+                                        <li class="icon fa-phone"><b>Manchester:</b> <br>07847 854 111</li>
 										</ul>
                                     
 
