--- a/work/index.html
+++ b/work/index.html
@@ -51,6 +51,7 @@
 														<div class="content color0 span-2-25">
 															<img width="65%" src="../images/boxologo2-04.png">
 																<h3>Join The Network!</h3>
+                                                            <p>Apply via <a href="mailto:team@boxo.io?subject=Boxo Network Application">email.</a></p>
 														<br><br>
 													</p>
 														</div>
