--- a/work/index.html
+++ b/work/index.html
@@ -52,8 +52,8 @@
 															<img width="65%" src="../images/boxologo2-04.png">
 																<h3>Join The Network!</h3>
                                                             <p>Apply via <a href="mailto:team@boxo.io?subject=Boxo Network Application">email.</a></p>
-														<br><br>
-													</p>
+                                                        <p><a href="../index.html">Home</a></p>
+													
 														</div>
 													</section>
 														<!-- Panel -->
