--- a/work/index.html
+++ b/work/index.html
@@ -48,11 +48,11 @@
 
 												<!-- Panel (Banner) -->
 													<section class="panel banner">
-														<div class="content color0 span-2-25">
+														<div class="content color0 span-3-75">
 															<img width="65%" src="../images/boxologo2-04.png">
 																<h3>Join The Network!</h3>
                                                             <p>Apply via <a href="mailto:team@boxo.io?subject=Boxo Network Application">email.</a></p>
-                                                        <p><a href="../index.html">Home</a></p>
+                                                        <p><a href="../index.html">Go back.</a></p>
 													
 														</div>
 													</section>
