--- a/work/index.html
+++ b/work/index.html
@@ -51,7 +51,11 @@
 														<div class="content color0 span-3-75">
 															<img width="65%" src="../images/boxologo2-04.png">
 																<h3>Join The Network!</h3>
-                                                            <p>Apply via <a href="mailto:team@boxo.io?subject=Boxo Network Application">email.</a></p>
+                                                            <p>Boxo works to provide exciting opportunities
+										for our brilliant network of content designers.
+										This gives freelancers the benefits of creating
+										for high-end clients, with the flexibility to
+										complete projects in their free time remotely. Apply via <a href="mailto:team@boxo.io?subject=Boxo Network Application">email.</a></p>
                                                         <p><a href="../index.html">Go back.</a></p>
 													
 														</div>
@@ -60,12 +64,9 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner">
 								<div class="content color1 span-2-75">
-										<h4>What network?</h4>
-									<p> Boxo works to provide exciting opportunities
-										for our brilliant network of content designers.
-										This gives freelancers the benefits of creating
-										for high-end clients, with the flexibility to
-										complete projects in their free time remotely.</p>
+										<h4>Who do we want?</h4>
+									<p>Creative briefs usually require skills in motion graphics and design.</p> 
+                                        <p>If this sounds like you, be sure to get in touch!</p>
 								<br><br>
 							</p>
 								</div>
