--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
 <script src="vendor/jquery.js"></script>
 <script src="dist/lity.js"></script>
 
+        <!--Start of Zendesk Chat Script-->
+<script type="text/javascript">
+window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
+d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+_.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute("charset","utf-8");
+$.src="https://v2.zopim.com/?5QvlTRMROclunqBYz4upSxFGKpXmwb2T";z.t=+new Date;$.
+type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
+</script>
+<!--End of Zendesk Chat Script-->
 
 	</head>
 
@@ -243,9 +252,9 @@ window.addEventListener('popstate', function() {
 									<ul class="icons">
                                         
                                     <br><br>
-											<li><a target="_blank" href="http://twitter.com/boxoltd" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a target="_blank" href="http://facebook.com/boxoltd" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-											<li><a target="_blank" href="http://instagram.com/boxo.site" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+											<li><a target="_blank" href="http://twitter.com/boxomedia" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+											<li><a target="_blank" href="http://facebook.com/boxomedia" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+											<li><a target="_blank" href="http://instagram.com/boxo.io" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 											<li><a target="_blank" href="http://vimeo.com/boxo" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
 										</ul>
 									</div>
