--- a/work/index.html
+++ b/work/index.html
@@ -35,6 +35,15 @@
 <script src="../vendor/jquery.js"></script>
 <script src="../dist/lity.js"></script>
 
+        <!--Start of Zendesk Chat Script-->
+<script type="text/javascript">
+window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
+d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+_.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute("charset","utf-8");
+$.src="https://v2.zopim.com/?5QvlTRMROclunqBYz4upSxFGKpXmwb2T";z.t=+new Date;$.
+type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
+</script>
+<!--End of Zendesk Chat Script-->
 
 	</head>
 
@@ -65,8 +74,8 @@
 							<section class="panel banner">
 								<div class="content color1 span-2-75">
 										<h4>Who do we want?</h4>
-									<p>Creative briefs usually require skills in motion graphics and design.</p> 
-                                        <p>If this sounds like you, be sure to get in touch!</p>
+									<p>Creative briefs usually require skills in motion graphics and design - but can involve web design or even app development.</p> 
+                                        <p>If you've got something to offer, be sure to get in touch!</p>
 								<br><br>
 							</p>
 								</div>
