--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@ window.addEventListener('popstate', function() {
                                     
 									<ul class="contact-icons color0">
                                         <li class="icon fa-envelope"><a href="mailto:team@boxo.site">team@boxo.io</a></li>
-											<li class="icon fa-phone"><b>London:</b> 07771404404</li>
-                                        <li class="icon fa-phone"><b>Manchester:</b> 07847854111</li>
+											<li class="icon fa-phone"><b>London:</b> +44 (0) 7771404404</li>
+                                        <li class="icon fa-phone"><b>Manchester:</b> +44 (0) 7847854111</li>
 										</ul>
                                     
 
