--- a/work/index.html
+++ b/work/index.html
@@ -58,14 +58,14 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 												<!-- Panel (Banner) -->
 													<section class="panel banner">
 														<div class="content color0 span-3-75">
-															<img width="65%" src="../images/boxologo2-04.png">
+															<a href="../index.html"><img width="65%" src="../images/boxologo2-04.png"></a>
 																<h3>Join The Network!</h3>
                                                             <p>Boxo works to provide exciting opportunities
 										for our brilliant network of content designers.
 										This gives freelancers the benefits of creating
 										for high-end clients, with the flexibility to
 										complete projects in their free time remotely. Apply via <a href="mailto:team@boxo.io?subject=Boxo Network Application">email.</a></p>
-                                                        <p><a href="../index.html"><i class="fa fa-home"></i></a></p>
+                                                        <p><a href="../index.html"><i class="fa fa-home"></i>Home</a></p>
 													
 														</div>
 													</section>
