--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 								<div class="content color0 span-3-75">
 									<img width="65%" src="images/boxologo2-02.png">
 										<h3>Social Media Content, Your Way.</h3>
-									<p>Boxo specialises in creating social media ads and <b>powerful</b> branded content for online businesses, retailers and other franchises.</p>
+									<p>Boxo specialises in creating social media ads and branded content for ecommerce stores, retailers and other businesses.</p>
 
 									<ul class="actions">
 										<li><a href="https://vimeo.com/248405401" class="button special color1" data-lity>Watch Video</a></li>
@@ -79,18 +79,14 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 						<!-- Panel -->
 							<section id="first" class="panel color1 span-6-75">
 								<div class="intro joined">
-									<h2 class="major">All Apps Supported</h2>
-									<p>We ensure campaigns meet <b>all</b> the technical requirements and content guidelines,
-										meaning your ads are <b>guaranteed</b> to be approved on any platform.</p>
+									<h2 class="major">Boost Your Social Game</h2>
+									<p>We will work with you to craft the most engaging and profitable campaigns to elevate your brand from the crowd. By building a large community of like-minded followers in the heart of your business, you create a platform for generating increasingly more revenue and awareness.</p>
 								</div>
 								<div class="inner">
 									<ul class="grid-icons two connected">
 										<li><span class="icon fa-facebook"><span class="label">Facebook</span></span></li>
 										<li><span class="icon fa-twitter"><span class="label">Twitter</span></span></li>
 										<li><span class="icon fa-instagram"><span class="label">Instagram</span></span></li>
-										<li><span class="icon fa-snapchat-ghost"><span class="label">Snapchat</span></span></li>
-										<li><span class="icon fa-whatsapp"><span class="label">Whatsapp</span></span></li>
-										<li><span class="icon fa-gears"><span class="label">Plus</span></span></li>
 									</ul>
 								</div>
 							</section>
@@ -161,7 +157,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
 
 
-						<!-- Panel -->
+						<!-- Panel 
 							<section class="panel color2 span-6-75">
 								<div class="intro color2">
 									<h2 class="major">How much?</h2>
@@ -218,7 +214,7 @@ window.addEventListener('popstate', function() {
     </form>
 
 								</div>
-                        </section>
+                        </section> -->
 
                             <!-- BASIC PLAN Panel -->
 
@@ -226,24 +222,20 @@ window.addEventListener('popstate', function() {
 								<div class="intro color4">
                                     <h2 class="major">Let's Talk</h2>
 									<!--<ul class="alt">
-										<h4>London</h4>
+										<h4>Sam</h4>
 										<li><i class="fa fa-phone" aria-hidden="true"></i>
 											07546 199 111<br>
 											<i class="fa fa-envelope" aria-hidden="true"></i>
-											<a href="mailto:sam@boxo.site">sam@boxo.site</a></li>
+											<a href="mailto:sam@boxo.io">sam@boxo.io</a></li>
 											<br><br>
-										<h4>Manchester</h4>
-										<li><i class="fa fa-phone" aria-hidden="true"></i>
-											07847 854 111<br>
-											<i class="fa fa-envelope" aria-hidden="true"></i>
-											<a href="mailto:stuart@boxo.site">stuart@boxo.site</a></li>
+										
 									</ul> -->
 
 
 									<ul class="contact-icons color0">
                                         <li class="icon fa-envelope"><a href="mailto:team@boxo.site">team@boxo.io</a></li>
-											<li class="icon fa-phone"><b>LDN:</b> +44 (0) 7771404404</li>
-                                        <li class="icon fa-phone"><b>MCR:</b> +44 (0) 7847854111</li>
+											<li class="icon fa-phone"><b>Sam:</b> +44 (0) 7771404404</li>
+                                  
 										</ul>
 
 
