--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 							<section class="panel banner">
 								<div class="content color0 span-3-75">
 									<img width="65%" src="images/boxologo2-02.png">
-										<h3>Social Media Content, Your Way.</h3>
+										<h3>Supercharge Your Social</h3>
 									<p>Boxo specialises in creating social media ads and branded content for ecommerce stores, retailers and other businesses.</p>
 
 									<ul class="actions">
