--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 							</section>
 
 
-
-						<!-- Panel -->
-							<section id="first" class="panel color4 span-6-75">
+	<!-- Panel -->
+							<section id="first" class="panel color1 span-6-75">
 								<div class="intro joined">
 									<h2 class="major">Boost Your Social Game</h2>
 									<p>We will work with you to craft the most engaging and profitable campaigns to elevate your brand from the crowd. By building a large community of like-minded followers in the heart of your business, you create a platform for generating increasingly more revenue and awareness.</p>
+								</div>
+								<div class="inner">
 								</div>
 							</section>
 
