--- a/index.html
+++ b/index.html
@@ -75,20 +75,6 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 							</section>
 
 
-	<!-- Panel -->
-							<section id="first" class="panel color1 span-6-75">
-								<div class="intro joined">
-									<h2 class="major">Boost Your Social Game</h2>
-									<p>We will work with you to craft the most engaging and profitable campaigns to elevate your brand from the crowd. By building a large community of like-minded followers in the heart of your business, you create a platform for generating increasingly more revenue and awareness.</p>
-								</div>
-								<div class="inner">
-								</div>
-							</section>
-
-
-
-						<!-- Panel -->
-
 						<!-- Panel -->
 							<section id="first" class="panel color1 span-6-75">
 								<div class="intro joined">
@@ -131,7 +117,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 									</div>
 
 
-									<div class="group span-3">
+									<!-- <div class="group span-3">
 
 										<a data-lity href="https://youtu.be/jDBwIxdfhaE" class="image filtered1 span-1-5" data-position="center">
                                             <img src="images/partners/candy.jpg" alt="" />
@@ -148,10 +134,11 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 										<a data-lity href="https://youtu.be/EhshrJ_Wnjc" class="image filtered1 span-1-5" data-position="center">
                                             <img src="images/partners/rizk.jpg" alt="" />
                                         </a>
+-->
+									</div> 
 
-									</div>
-
-									<div class="group span-1-5">
+									
+									<!-- <div class="group span-1-5">
 
 										<a data-lity href="https://youtu.be/afkDbV4oXI0" class="image filtered1 span-1-5" data-position="center">
                                             <img src="images/partners/farm.jpg" alt="" />
@@ -163,8 +150,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
                                             </a>
 
 
-									</div>
-
+									</div> -->
 								</div>
 							</section>
 
