--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 									</div>
 
 
-									<!-- <div class="group span-3">
+									 <div class="group span-3">
 
-										<a data-lity href="https://youtu.be/jDBwIxdfhaE" class="image filtered1 span-1-5" data-position="center">
+										<!-- <a data-lity href="https://youtu.be/jDBwIxdfhaE" class="image filtered1 span-1-5" data-position="center">
                                             <img src="images/partners/candy.jpg" alt="" />
                                         </a>
 
@@ -132,7 +132,7 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
                                             </a>
 
 										<a data-lity href="https://youtu.be/EhshrJ_Wnjc" class="image filtered1 span-1-5" data-position="center">
-                                            <img src="images/partners/rizk.jpg" alt="" />
+                                            <img src="images/partners/rizk.jpg" alt="" /> -->
                                         </a>
 -->
 									</div> 
@@ -146,11 +146,11 @@ type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
 
 
 										<a data-lity href="https://youtu.be/JvWRtxoyrHM" class="image filtered1 span-1-5" data-position="center">
-                                            <img src="images/partners/comeon.jpg" alt="" />
+                                            <img src="images/partners/comeon.jpg" alt="" /> -->
                                             </a>
 
 
-									</div> -->
+									</div> 
 								</div>
 							</section>
 
