--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@ window.addEventListener('popstate', function() {
 									<ul class="contact-icons color0">
                                         <li class="icon fa-envelope"><a href="mailto:team@boxo.site">team@boxo.io</a></li>
 											<li class="icon fa-phone"><b>Sam:</b> +44 (0) 7771404404</li>
+											<li class="icon fa-phone"><b>Alex:</b> +44 (0) 7889758254</li>
                                   
 										</ul>
 
@@ -251,8 +252,8 @@ window.addEventListener('popstate', function() {
 									</div>
 							</section>
 
-						<!-- Copyright -->
-							<div class="copyright"><b>&copy;2018 Boxo Marketing Ltd.</b></div>
+						<!-- Copyright 
+							<div class="copyright"><b>&copy;2018 Boxo Marketing Ltd.</b></div>-->
 
 					</div>
 
