--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@ window.addEventListener('popstate', function() {
 
 									<ul class="icons">
 
-                                    <br><br>
+                                    <br><br><!--
 											<li><a target="_blank" href="http://twitter.com/boxomedia" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a target="_blank" href="http://facebook.com/boxomedia" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 											<li><a target="_blank" href="http://instagram.com/boxo.io" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a target="_blank" href="http://vimeo.com/boxo" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
+											<li><a target="_blank" href="http://vimeo.com/boxo" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li> -->
 										</ul>
 									</div>
 							</section>
